# src/main/java/com/itechart/ema/exception/ErrorType.java
@@ -10,6 +10,7 @@ class ErrorType {
     private static final String BASE_URL = "/problem";
 
     static URI DEFAULT = URI.create(BASE_URL + "/default");
+    static URI CONFLICT = URI.create(BASE_URL + "/conflict");
     static URI CONSTRAINT_VIOLATION = URI.create(BASE_URL + "/constraint-violation");
     static URI BAD_REQUEST = URI.create(BASE_URL + "/bad-request");
     static URI NOT_FOUND = URI.create(BASE_URL + "/not-found");
